adding import sql and erasing product initializer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,14 @@ quarkus.http.auth.policy.roles-allowed.roles-allowed=user
 
 quarkus.smallrye-jwt.enabled=true
 quarkus.smallrye-jwt.path.enabled=true
+
+# Key settings
+smallrye.jwt.algorithm=RS256
+smallrye.jwt.sign.key.location=privateKey.pem
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=auth-app
-mp.jwt.sign.key-location=privateKey.pem
+
+
 
 
 quarkus.log.category."io.quarkus.smallrye.jwt".level=DEBUG
