--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,9 @@ smallrye.jwt.sign.key.location=privateKey.pem
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=auth-app
 
-
-
-
 quarkus.log.category."io.quarkus.smallrye.jwt".level=DEBUG
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
