--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,6 @@ quarkus.http.auth.policy.roles-allowed.roles-allowed=user
 
 
 quarkus.smallrye-jwt.enabled=true
-quarkus.smallrye-jwt.path.enabled=true
 
 # Key settings
 smallrye.jwt.algorithm=RS256
@@ -20,7 +19,7 @@ smallrye.jwt.sign.key.location=privateKey.pem
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=auth-app
 
-quarkus.log.category."io.quarkus.smallrye.jwt".level=DEBUG
+quarkus.log.category."org.acme".level=DEBUG
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
